--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 
-
-  #show-contact {
+  #order {
   display: none;
   }
 
@@ -39,14 +38,14 @@
   h1 {
   margin: 50px 0 0 0;
   color: #000;
-  font-family: Amatic SC', cursive;
+  font-family: 'Amatic SC', cursive;
   font-size: 48px;
   font-weight: normal;
   text-align: center; }
   h2 {
   margin: 50px 0 0 0;
   color: #000;
-  font-family: Amatic SC', cursive;
+  font-family: 'Amatic SC', cursive;
   font-size: 32px;
   font-weight: normal;
   text-align: center; }
@@ -54,21 +53,21 @@
   h5 {
   margin: 50px 0 0 0;
   color: #000;
-  font-family: Amatic SC', cursive;
+  font-family: 'Amatic SC', cursive;
   font-size: 25px;
   font-weight: normal;
   text-align: center; }
 
   p {
   color: #000;
-  font-family: Amatic SC', cursive;
+  font-family: 'Amatic SC', cursive;
   font-size: 20px;
   font-weight: normal;}
 
   ul li {
   margin-left: 10px;
   color: #000;
-  font-family: Amatic SC', cursive;
+  font-family: 'Amatic SC', cursive;
   font-size: 20px;
   font-weight: normal;
    }
@@ -98,7 +97,7 @@
   position: absolute;
   top: 0;
   z-index: 1;
-  font-family: Amatic SC', cursive;
+  font-family: 'Amatic SC', cursive;
   font-size: 22px;
   color: #000;
   text-indent: 10px;
@@ -138,7 +137,7 @@
   border-bottom: 3px solid #000;
   background-color: transparent;
   color: #000;
-  font-family: Amatic SC', cursive;
+  font-family: 'Amatic SC', cursive;
   font-size: 22px;
   position: relative;
   z-index: 99; }
@@ -167,7 +166,7 @@
   color: #fff;
   cursor: default;
   border: 2px outset buttonface;
-  font-family: Amatic SC', cursive;
+  font-family: 'Amatic SC', cursive;
   font-size: 22px;
   text-decoration: none;
   text-align: center;
