--- a/css/styles.css
+++ b/css/styles.css
@@ -166,17 +166,17 @@
   .styleMe span.fixed span {
   top: -35px; }
 
-#styleMe-radio {
+.styleMe-radio {
 float: left;
 width: 100%;
 margin: 0 0 30px 0; }
-#styleMe-radio label.radio {
+.styleMe-radio label.radio {
 float: left;
 width: auto;
 line-height: 30px;
 margin: 0 0 10px 0;
-color: #fff;
-font-family: 'Indie Flower', cursive;
+color: #000;
+font-family:  'Amatic SC', cursive;
 font-size: 22px;
 cursor: pointer;
 position: relative;
@@ -184,21 +184,21 @@ clear: both;
 transition: 0.3s;
 -webkit-transition: 0.3s;
 -moz-transition: 0.3s; }
-#styleMe-radio label.radio:before {
+.styleMe-radio label.radio:before {
 content: '';
 float: left;
 width: 29px;
 height: 29px;
 margin: 0 5px 0 0;
-background-color: #fff;
+background-color: #e37526;
 border-radius: 100%;
 font-size: 22px;
 text-indent: 40px; }
-#styleMe-radio label.radio:after {
+.styleMe-radio label.radio:after {
 content: '';
 width: 5px;
 height: 5px;
-background-color: #2C3E50;
+background-color: #e32636;
 border-radius: 100%;
 position: absolute;
 top: 12px;
@@ -207,13 +207,13 @@ opacity: 0;
 transition: 0.2s;
 -webkit-transition: 0.2s;
 -moz-transition: 0.2s; }
-#styleMe-radio label.radio.selected:after {
+.styleMe-radio label.radio.selected:after {
 width: 15.5px;
 height: 15.5px;
 top: 7px;
 left: 7px;
 opacity: 1; }
-#styleMe-radio label.radio:hover {
+.styleMe-radio label.radio:hover {
 text-indent: 5px; }
 
 
@@ -223,7 +223,7 @@ text-indent: 5px; }
   height: 50px;
   line-height: 50px;
   margin: 50px 0 0 0;
-  background-color: #56F9CB;
+  background-color: #e32636;
   color: #fff;
   cursor: default;
   border: 2px outset buttonface;
@@ -235,4 +235,4 @@ text-indent: 5px; }
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s; }
   .btn:hover {
-  background-color: #56F9A2; }
+  background-color: #e37526; }
